--- a/style/projetos.css
+++ b/style/projetos.css
@@ -26,6 +26,7 @@ div.containerProjetos{
 
 /* Div que enbloba img do projeto + nome do projeto */
 div.containerProjetos div{
+    cursor: pointer;
     display: flex;
     flex-direction: column;
     transition: 300ms;
@@ -59,19 +60,42 @@ h2.nomeFreelance{
     background-color: var(--lilas);
 }
 
-/* Modal */
-div.modalContainer{
-    display: none;
+/* Parte referente ao modal: */
+/* Modal - Camada preta */
+div.camadaPreta{
+    visibility: hidden;
+    width: 99vw;
+    height: 100dvh;
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.692);
+}
+
+/* Modal - Ícone para fechar modal */
+i.icon-x{
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 40px;
+    color: var(--cinza-medio);
+    transition: 200ms;
+}
+
+i.icon-x:hover{
+    color: var(--branco);
 }
 
 /* Modal - Caixa com conteúdo do modal */
 div.modalProjeto{
+    visibility: hidden;
     width: 750px;
     height: 650px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     box-shadow: 0px 0px 10px 4px var(--ciano-claro);
     border-radius: 10px;
     padding: 0 74px;
