--- a/style/projetos.css
+++ b/style/projetos.css
@@ -106,7 +106,7 @@ div.modalProjeto{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 25px;
+    gap: 35px;
     background-color: var(--azul-escuro);
 }
 
@@ -149,6 +149,7 @@ img.iconTecnologia{
 /* Modal - Caixa com informações de texto + tecnologias */
 div.modalInformacoes{
     width: 100%;
+    height: 130px;
     display: flex;
     justify-content: space-between;
 }
