Adição do modal "FlexBlog" e de suas funções de abrir e fechar
- Também corrigi onde estava o código modal, antes estava fora da <div> da camada preta, onde deve ficar todos os modais/
- Precisei adicionar um align-itens: center no .tecnologiasProjeto porque quando o a largura da caixa com os icons é menor que a do h3, os icons não ficavam centralizados. Agora ambos o h3 e os icons de tecnologias estão centralizados horizontalmente.

--- a/style/projetos.css
+++ b/style/projetos.css
@@ -185,9 +185,11 @@ div.sobreProjeto a:hover{
     color: var(--cinza-escuro);
 }
 
-/* Modal - Título do tópico Tecnologias */
-div.tecnologiasProjeto h3{
-    text-align: center;
+/* Caixa com as tecnologias  */
+.tecnologiasProjeto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Modal - Imagens das tecnologias */
