--- a/style/projetos.css
+++ b/style/projetos.css
@@ -351,6 +351,85 @@ a.modalBotao:hover{
         transform: translateX(0); /* Move a seta para direita */
         color: var(--ciano-medio);
     }
+
+    /* Parte referente ao modal: */
+    /* Modal - Ícone para fechar modal */
+    i.icon-x{
+        top: 5px;
+        right: 10px;
+        font-size: 35px;
+        padding: 5px;
+    }
+
+    /* Modal - Caixa com conteúdo do modal */
+    div.modalProjeto{
+        width: 300px;
+        height: fit-content;        
+        padding: 20px 12px;
+        gap: 20px;
+    }
+
+    /* Modal - Título do projeto no modal */
+    div.modalProjeto h2{
+        margin-top: 25px;
+        font-size: 25px;
+    }
+
+
+    /* Modal - Título do projeto Freelance */
+    div.modalFreelance h2{
+        margin-top: 30px;
+        font-size: 25px;
+        text-align: center;
+    }
+
+    /* Modal - Imagem do projeto */
+    div.modalImgData > img{
+        width: 100%;
+        height: 180px;
+    }
+
+    /* Modal - Caixa com informações de texto + tecnologias */
+    div.modalInformacoes{
+        height: fit-content;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 20px;
+    }
+
+    /* Modal - Caixa com informações de texto */
+    div.sobreProjeto{
+        width: 100%;
+    }
+
+    /* Modal - Caixa com os ícones de tecnologia */
+    div.tecnologiasProjeto div{
+        display: flex;
+        justify-content: center;
+        flex-wrap: unset;
+        gap: 5px;
+    }
+
+    /* Modal - Caixa dos botões */
+    div.containerBotoes{
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    /* Modal - Botáo */
+    a.modalBotao{
+        width: 170px;
+        padding: 12px 0;
+        font-size: 14px;
+    }
+
+    a.modalBotao:active{
+        scale: 1.05;
+        color: var(--branco);
+        background-color: var(--ciano-medio);
+    }
 }
 @media only screen and (min-width: 390px) and (max-width: 458px) {
     /* Main */
@@ -416,6 +495,76 @@ a.modalBotao:hover{
         transform: translateX(0); /* Move a seta para direita */
         color: var(--ciano-medio);
     }
+
+    /* Parte referente ao modal: */
+    /* Modal - Ícone para fechar modal */
+    i.icon-x{
+        top: 5px;
+        right: 5px;
+        font-size: 35px;
+        padding: 5px;
+    }
+
+    /* Modal - Caixa com conteúdo do modal */
+    div.modalProjeto{
+        width: 350px;
+        height: fit-content;        
+        padding: 20px 30px;
+        gap: 25px;
+    }
+
+    /* Modal - Caixa com conteúdo do modal */
+    div.modalProjeto h2{
+        font-size: 28px;
+    }
+
+    /* Modal - Título do projeto Freelance */
+    div.modalFreelance h2{
+        margin-top: 20px;
+        text-align: center;
+    }
+
+    /* Modal - Imagem do projeto */
+    div.modalImgData > img{
+        width: 100%;
+        height: 180px;
+    }
+
+    /* Modal - Caixa com informações de texto + tecnologias */
+    div.modalInformacoes{
+        height: fit-content;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 20px;
+    }
+
+    /* Modal - Caixa com os ícones de tecnologia */
+    div.tecnologiasProjeto div{
+        display: flex;
+        justify-content: center;
+        flex-wrap: unset;
+        gap: 5px;
+    }
+
+    /* Modal - Caixa dos botões */
+    div.containerBotoes{
+        display: flex;
+        gap: 25px;
+    }
+
+    /* Modal - Botáo */
+    a.modalBotao{
+        width: 150px;
+        padding: 12px 0;
+        font-size: 14px;
+    }
+
+    a.modalBotao:active{
+        scale: 1.05;
+        color: var(--branco);
+        background-color: var(--ciano-medio);
+    }
 }
 @media only screen and (min-width: 459px) and (max-width: 598px) {
     /* Main */
@@ -453,6 +602,68 @@ a.modalBotao:hover{
     /* Carrossel - Container dos Botões */
     div.carrosselProjMaior{
         display: block; /* Serve apenas para ocultar/exibir a caixa dos botões */
+    }
+
+    /* Parte referente ao modal: */
+    /* Modal - Ícone para fechar modal */
+    i.icon-x{
+        top: 5px;
+        right: 10px;
+        font-size: 35px;
+        padding: 5px;
+    }
+
+    /* Modal - Caixa com conteúdo do modal */
+    div.modalProjeto{
+        width: 420px;
+        height: fit-content;        
+        padding: 20px 30px;
+        gap: 25px;
+    }
+
+    /* Modal - Freelance */
+    div.modalFreelance{
+        text-align: center;
+    }
+
+    /* Modal - Imagem do projeto */
+    div.modalImgData > img{
+        width: 100%;
+        height: 180px;
+    }
+
+    /* Modal - Caixa com informações de texto + tecnologias */
+    div.modalInformacoes{
+        height: fit-content;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 20px;
+    }
+
+    /* Modal - Caixa com os ícones de tecnologia */
+    div.tecnologiasProjeto div{
+        display: flex;
+        justify-content: center;
+        flex-wrap: unset;
+        gap: 5px;
+    }
+
+    /* Modal - Caixa dos botões */
+    div.containerBotoes{
+        display: flex;
+        gap: 25px;
+    }
+
+    /* Modal - Botáo */
+    a.modalBotao{
+        width: 150px;
+    }
+
+    a.modalBotao:active{
+        scale: 1.05;
+        color: var(--branco);
+        background-color: var(--ciano-medio);
     }
 }
 @media only screen and (min-width: 599px) and (max-width: 768px) {
@@ -492,6 +703,20 @@ a.modalBotao:hover{
     div.carrosselProjMaior{
         display: block; /* Serve apenas para ocultar/exibir a caixa dos botões */
     }
+
+    /* Modal - Caixa com conteúdo do modal */
+    div.modalProjeto{
+        width: 550px;
+        height: 550px;        
+        padding: 0 30px;
+        gap: 20px;
+    }
+
+    /* Modal - Imagem do projeto */
+    div.modalImgData > img{
+        width: 500px;
+        height: 200px;
+    }
 }
 @media only screen and (min-width: 769px) and (max-width: 918px) {
     /* Main */
@@ -529,6 +754,14 @@ a.modalBotao:hover{
     /* Carrossel - Container dos Botões */
     div.carrosselProjMaior{
         display: block; /* Serve apenas para ocultar/exibir a caixa dos botões */
+    }
+
+    /* Modal - Caixa com conteúdo do modal */
+    div.modalProjeto{
+        width: 650px;
+        height: 600px;        
+        padding: 0 30px;
+        gap: 30px;
     }
 } 
 @media only screen and (min-width: 919px) and (max-width: 1095px) {
