--- a/style/sobre.css
+++ b/style/sobre.css
@@ -86,6 +86,13 @@ section#ExperienciaCertificados{
     color: var(--branco);
 }
 
+/* Section Experiencia + Certificados - Cards da Experiência */
+div#Experiencia section{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
 /* Card Experiência + Certificados - Container */
 div.card{
     border-radius: 5px;
@@ -100,9 +107,15 @@ div.card{
 div.cardExperiencia{
     max-width: 580px;
 }
+
+div.cardExperiencia p{
+    font-size: 20px;
+}
+
 /* Card Certificados - Container  */
 div.cardCertificados{
     max-width: 450px;
+    height: fit-content;
 }
 
 /* Card Experiência e Certificados - Título */
@@ -123,6 +136,13 @@ div.card h4{
     font-size: 15px;
     font-weight: 400;
     color: var(--cinza-medio);
+}
+
+/* Card Certificados - Engloba os Cards dos Certificados  */
+div#certificados section{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 /* Card Certificados - Icon e Linha vertical + Card */
